finishes the main AI refactoring
things are now much more inline with vanilla behaviour system.